[gd_scene load_steps=5 format=1]

[ext_resource path="res://Player/HUD/Spells/Spells.gd" type="Script" id=1]
[ext_resource path="res://Player/HUD/Textures/M1/0.png" type="Texture" id=2]
[ext_resource path="res://Player/HUD/Textures/Shade/0.png" type="Texture" id=3]
[ext_resource path="res://Fonts/yoster_island.tres" type="DynamicFont" id=4]

[node name="Spells" type="Node2D"]

transform/pos = Vector2( 0, 258 )
script/script = ExtResource( 1 )

[node name="M1Sprite" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( 64, 0 )

[node name="M1Shade" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )
centered = false
offset = Vector2( 64, 0 )

[node name="M1Time" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 0.0
margin/right = 94.0
margin/bottom = 30.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


